# knxcc

./: Makefile.in  configure  configure.in  configure.in.in  subdirs
admin/: cvs.sh
data/: Makefile.am  Makefile.in  kanotix-settings.directory  kde-kanotix.menu  kde-knxcc.menu  kde-settings-kanotix.directory
debian/: changelog  control  copyright  knxcc-kde.install  knxcc.install  knxcc.preinst  rules  watch
debian/patches/: 00list  just_recommend_sysv-freeze.dpatch
knxcc_boot/: Makefile.am  Makefile.in  bootdialog.ui  knxcc_boot.cpp  knxcc_boot.desktop  knxcc_boot.h  knxcc_boot.loT
knxcc_display/: Makefile.am  Makefile.in  displaydialog.ui  knxcc_display.cpp  knxcc_display.desktop  knxcc_display.h
knxcc_info/: Makefile.am  Makefile.in  infodialog.ui  knxcc_info.cpp  knxcc_info.desktop  knxcc_info.h
knxcc_network/: Makefile.am  Makefile.in  interfacestack.cpp  interfacestack.h  interfacewidget.ui  ipaddressvalidator.cpp  ipaddressvalidator.h  knxcc_network.cpp  knxcc_network.desktop  knxcc_network.h  knxcc_network_interface.cpp  knxcc_network_interface.h  networkdialog.ui  qhexvalidator.cpp  qhexvalidator.h
knxcc_script/: Makefile.am  Makefile.in  knxcc
knxcc_script/modules/: boot.bm  dialog.bm  display.bm  info.bm  interface  network.bm  server.bm
knxcc_server/: Makefile.am  Makefile.in  knxcc_server.cpp  knxcc_server.desktop  knxcc_server.h  serverdialog.ui
knxcc_time/: Makefile.am  Makefile.in  knxcc_time.cpp  knxcc_time.desktop  knxcc_time.h
po/: Makefile.am  Makefile.in  knxccboot.pot  knxccdisplay.pot  knxccinfo.pot  knxccnetwork.pot  knxccscript.pot  knxccserver.pot  knxcctime.pot
po/de/: Makefile.in  knxccboot.gmo  knxccboot.po  knxccdisplay.gmo  knxccdisplay.po  knxccinfo.gmo  knxccinfo.po  knxccnetwork.gmo  knxccnetwork.po  knxccscript.gmo  knxccscript.po  knxccserver.gmo  knxccserver.po  knxcctime.gmo  knxcctime.po
